# RadeonProRender-Baikal

./: CMakeLists.txt
BaikalDataGenerator/: CMakeLists.txt
BaikalDataGenerator/Source/: app_config.h  cmd_line_parser.cpp  cmd_line_parser.h  data_generator.cpp  data_generator.h  data_generator_params.h  main.cpp  object_loader.cpp  object_loader.h  utils.h
Rpr/WrapObject/: LightObject.h
